cmake_minimum_required(VERSION 2.8)

# Adds an executable target
#add_executable(lab10C lab10C.c)
#add_executable(lab10A lab10A.c)

# These are the files we want to give students
#install(TARGETS lab10C lab10A DESTINATION "${RELEASE_DIR}/lab10")
#install(FILES lab10C.c lab10A.c DESTINATION "${RELEASE_DIR}/lab10")

